--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,5 +1,19 @@
-$body-bg: #34495e;
-$navbar-default-bg: #2c3e50;
-$navbar-default-link-color: #ecf0f1;
-$navbar-default-link-hover-color: #bdc3c7;
+@import url(http://fonts.googleapis.com/css?family=Lato:400,700);
+
+$body-bg:	#ecf0f1;
+$font-family-sans-serif:	'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$navbar-height:	45px;
+$navbar-default-bg: #fff;
+$navbar-default-brand-color:	#c0392b;
+$brand-primary:	#c0392b;
+$jumbotron-bg:	#fff;
+
 @import 'bootstrap';
+
+.center {
+	text-align: center;
+}
+
+.navbar-brand {
+	font-weight: bold;
+}
