--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -8,6 +8,7 @@ $navbar-default-brand-color:	#c0392b;
 $brand-primary:	#c0392b;
 $jumbotron-bg:	#fff;
 
+@import "bootstrap-sprockets";
 @import 'bootstrap';
 
 .center {
