Updated name and layouts. Fixed permissions bug where Edit & Delete appear on images with deleted users

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,5 @@
-<h1>About us</h1>
-<p>We are working on our One Month Rails Pinteresting app!</p>
+<h1>About imgrr</h1>
+<hr size="1" noshade="noshade">
+<p>Howdy,</p>
+<p>imgrr (image-grr) is my first ever experience using Ruby on Rails, created with the very awesome <a href="https://onemonth.com/courses/one-month-rails?referral_code=ZwyfhoygCE9X&utm_medium=referral_program&utm_source=copy_btn">One Month Rails</a> class. Thanks for checking it out!</p>
+<p>- <a href="https://twitter.com/jcurreee">@jcurreee</a></p>
