--- a/app/views/pins/edit.html.erb
+++ b/app/views/pins/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="panel panel-default">
   <div class="panel-heading">
     <div class="panel-title">
-      Editing Pin
+      Update Image
     </div><!-- /.panel-title -->
   </div><!-- /.panel-heading -->
 
@@ -10,7 +10,6 @@
 	</div><!-- /.panel-body -->
 
 	<div class="panel-footer">
-		<%= link_to 'Show', @pin %> |
-		<%= link_to 'Back', pins_path %>
+		<%= link_to 'Back to Image', @pin %>
 	</div><!-- /.panel-footer -->
 </div>
