--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -3,20 +3,36 @@
 <div id="pins" class="transitions-enabled">
   <% @pins.each do |pin| %>
     <div class="box panel default panel-panel">
-      <%= link_to image_tag(pin.image.url(:medium)), pin %>
+      <div class="panel-heading center">
+        <%= link_to image_tag(pin.image.url(:medium)), pin %>
+      </div>
       <div class="panel-body">
         <p><%= pin.description %></p>
         <p><strong><%= pin.user.name %></strong></p>
-        <% if pin.user == current_user %>
-          <div class="actions">
-            <%= link_to edit_pin_path(pin) do %>
+
+        <% if current_user && (pin.user == current_user) %>
+
+          <div class="btn-group">
+
+            <%= link_to edit_pin_path(pin), class: "btn btn-default btn-sm" do %>
               <span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Edit
             <% end %>
-            <%= link_to pin, method: :delete, data: { confirm: 'Are you sure?' } do %>
-              <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> Delete
-            <% end %>
+            <button type="button" class="btn btn-default btn-sm dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+              <span class="caret"></span>
+              <span class="sr-only">Toggle Dropdown</span>
+            </button>
+            <ul class="dropdown-menu" role="menu">
+              <li>
+                <%= link_to pin, method: :delete, data: { confirm: 'Are you sure?' } do %>
+                  <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> Delete
+                <% end %>
+              </li>
+            </ul>
+
           </div>
+
         <% end %>
+
       </div>
     </div>
   <% end %>
