--- a/app/views/pins/new.html.erb
+++ b/app/views/pins/new.html.erb
@@ -1,15 +1,11 @@
 <div class="panel panel-default">
   <div class="panel-heading">
     <div class="panel-title">
-      New Pin
+      Upload Image
     </div><!-- /.panel-title -->
   </div><!-- /.panel-heading -->
 
   <div class="panel-body">
 		<%= render 'form' %>
 	</div><!-- /.panel-body -->
-
-	<div class="panel-footer">
-		<%= link_to 'Back', pins_path %>
-	</div><!-- /.panel-footer -->
 </div>
