--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,12 +1,14 @@
-@import url(http://fonts.googleapis.com/css?family=Lato:400,700);
+@import url(http://fonts.googleapis.com/css?family=Montserrat:400,700);
 
-$body-bg:	#ecf0f1;
-$font-family-sans-serif:	'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-$navbar-height:	45px;
-$navbar-default-bg: #fff;
-$navbar-default-brand-color:	#c0392b;
-$brand-primary:	#c0392b;
-$jumbotron-bg:	#fff;
+$body-bg:	#fff;
+$font-family-sans-serif:	'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$navbar-height:	50px;
+$navbar-default-bg: #ecf0f1;
+$navbar-default-brand-color:	#27ae60;
+$navbar-default-link-color: #7f8c8d;
+$brand-primary:	#27ae60;
+$jumbotron-color:	#fff;
+$jumbotron-bg:	#ecf0f1;
 
 @import "bootstrap-sprockets";
 @import 'bootstrap';
@@ -17,4 +19,9 @@ $jumbotron-bg:	#fff;
 
 .navbar-brand {
 	font-weight: bold;
+}
+
+.jumbotron {
+  background-image: url("../images/tree_bark-1920x1080.jpg");
+  background-size: cover;
 }
