--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,24 +9,34 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <%= link_to "Pinteresting", root_path, class: "navbar-brand" %>
+        <%= link_to "imgrr", root_path, class: "navbar-brand" %>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li>
+            <%= link_to new_pin_path do %>
+              <span class="glyphicon glyphicon-cloud-upload" aria-hidden="true"></span> upload images
+            <% end %>
+          </li>
+          <li>
+            <a href="#"><span class="glyphicon glyphicon-random" aria-hidden="true"></span> random</a>
+          </li>
+        </ul>
+
         <ul class="nav navbar-nav navbar-right">
-          <li><%= link_to "Home", root_path %></li>
-          <li><%= link_to "About", about_path %></li>
+          <li><%= link_to "about imgrr", about_path %></li>
           <% if user_signed_in? %>
-            <li>
-              <%= link_to new_pin_path do %>
-                <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> New Pin
-              <% end %>
+            <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><%= current_user.name %> <span class="caret"></span></a>
+              <ul class="dropdown-menu" role="menu">
+                <li><%= link_to "account settings", edit_user_registration_path %></li>
+                <li><%= link_to "sign out", destroy_user_session_path, method: :delete %></li>
+              </ul>
             </li>
-            <li><%= link_to "My Profile", edit_user_registration_path %>
-            <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
           <% else %>
-            <li><%= link_to "Sign in", new_user_session_path %></li>
+            <li><%= link_to "sign in", new_user_session_path %></li>
+            <li><%= link_to "sign up", new_user_registration_path %></li>
           <% end %>
         </ul>
       </div><!-- /.navbar-collapse -->
