--- a/app/views/pages/_home.html.erb
+++ b/app/views/pages/_home.html.erb
@@ -1,7 +1,8 @@
-<div class="jumbotron center">
-	<h1>Welcome to my app!</h1>
-		<p>
-			<%= link_to "Log in", new_user_session_path, class: "btn btn-default btn-lg" %>
-			<%= link_to "Sign up", new_user_registration_path, class: "btn btn-primary btn-lg" %>
+<div class="jumbotron">
+	<h1>Welcome to imgrr!</h1>
+	<p>imgrr is the premiere destination for bears on the intarwebz. Please won't you help us save the bears?</p>
+		<p class="center">
+			<%= link_to "sign in", new_user_session_path, class: "btn btn-default btn-lg" %>
+			<%= link_to "sign up", new_user_registration_path, class: "btn btn-primary btn-lg" %>
 		</p>
 </div>
