--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -1,7 +1,3 @@
-<%= link_to pins_path do %>
-  <span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span> Back
-<% end %>
-
 <div class="row">
   <div class="col-md-offset-2 col-md-8">
     <div class="panel panel-default">
@@ -11,9 +7,12 @@
       <div class="panel-body">
         <p><%= @pin.description %></p>
         <p><strong><%= @pin.user.name %></strong></p>
-        <% if @pin.user == current_user %>
-          <%= link_to edit_pin_path(@pin) do %>
+        <% if current_user && (@pin.user == current_user) %>
+          <%= link_to edit_pin_path(@pin), class: "btn btn-default btn-sm" do %>
             <span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Edit
+          <% end %>
+          <%= link_to @pin, class: "btn btn-danger btn-sm", method: :delete, data: { confirm: 'Are you sure?' } do %>
+            <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> Delete
           <% end %>
         <% end %>
       </div>
