--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -28,7 +28,8 @@
         <ul class="nav navbar-nav navbar-right">
           <li><%= link_to "about imgrr", about_path %></li>
           <% if user_signed_in? %>
-            <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><%= current_user.name %> <span class="caret"></span></a>
+            <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+                <%= image_tag current_user.gravatar_url(:size => 20, :default => "mm") %> <%= current_user.name %> <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
                 <li><%= link_to "account settings", edit_user_registration_path %></li>
                 <li><%= link_to "sign out", destroy_user_session_path, method: :delete %></li>
