Added random feature

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -21,7 +21,9 @@
             <% end %>
           </li>
           <li>
-            <a href="#"><span class="glyphicon glyphicon-random" aria-hidden="true"></span> random</a>
+            <%= link_to random_path do %>
+              <span class="glyphicon glyphicon-random" aria-hidden="true"></span> random
+            <% end %>
           </li>
         </ul>
 
