--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -44,8 +44,7 @@
       <p>Cancel my account</p>
     </div><!-- /.panel-title -->
 
-    <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "btn btn-danger" %></p>
+    <p>All of your images will be deleted! <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "btn btn-danger" %></p>
 
-    <%= link_to "Back", :back %>
   </div><!-- /.panel-footer -->
 </div>
